[tool.poetry]
name = "push-submission-published"
version = "0.1.0"
description = "Send pub/sub events to GCP for publication of submission"
authors = ["Mark Nazzaro <marknazzaro2@gmail.com>"]
readme = "README.md"
packages = [{include = "push_submission_published"}]

[tool.poetry.dependencies]
python = "3.10"
SQLAlchemy = "^2.0.16"
google-cloud-pubsub = "^2.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
